--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper main-page">
         <div class="wrapper__content">
-            <section class="hero">
+            <section class="section hero">
                 <div class="container hero__container">
                     <header class="header">
                             <a href="#" class="logo">
