--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                     <div class="radio__title">Оплата картой</div>
                                 </label>
                             </div>
-                            <div class="form__controls">
+                            <div class="form__controls form__controls-indent">
                                 <label class="radio radio--checkbox">
                                     <input type="checkbox" class="radio__elem">
                                     <div class="radio__visible"></div>
