--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Surfboard</title>
     <link rel="stylesheet" href="styles/css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -29,12 +29,17 @@
                                 <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
                             </ul>   
                         </nav>
-                                <a class="phone__number" href="tel:+78009039090">
-                                    <span class="phone-number__icon-elem">
-                                        <img src="img/icons/phone.svg" alt="phone" class="phone-number__icon">
-                                    </span>
-                                    <span class="phone-number__text">8 800 903 90 90</span>
-                                </a>
+                        <a class="phone__number header__phone__number" href="tel:+78009039090">
+                            <span class="phone-number__icon-elem">
+                                <img src="img/icons/phone.svg" alt="phone" class="phone-number__icon">
+                            </span>
+                            <span class="phone-number__text">8 800 903 90 90</span>
+                        </a>
+                        <a href="" class="hamburger">
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
+                        </a>
                     </header>
                     <div class="herro__title-section">
                             <h1 class="hero__main-title">Профессиональные доски для 
@@ -162,7 +167,7 @@
 
             <section class="section order-section">
                 <div class="container">
-                    <h2 class="section__title title__form">Закажите доску</h2>
+                    <h2 class="section__title title__form">Закажите доставку</h2>
                     <form action="" class="form">
                         <div class="form__col">
                             <div class="form__row">
@@ -226,7 +231,7 @@
                                     <div class="radio__title">Оплата картой</div>
                                 </label>
                             </div>
-                            <div class="form_btns">
+                            <div class="form__btns">
                                 <input type="submit" value="Заказать" class="btn btn--theme--yellow">
                                 <input type="reset" value="Очистить" class="btn btn--theme--transparent">
                             </div>
