--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                                 <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
                             </ul>   
                         </nav>
-                        <a class="phone__number header__phone__number" href="tel:+78009039090">
+                        <a class="phone__number header__phone-number" href="tel:+78009039090">
                             <span class="phone-number__icon-elem">
-                                <img src="img/icons/phone.svg" alt="phone" class="phone-number__icon">
+                                <svg class="phone-number__icon">
+                                    <use xlink:href="img/icons/sprite.svg#phone"></use>
+                                </svg>
                             </span>
                             <span class="phone-number__text">8 800 903 90 90</span>
                         </a>
@@ -51,19 +53,25 @@
                         <ul class="features">
                             <li class="features__item feature">
                                <div class="feature__icon">
-                                    <img src="img/feature/surfboard.svg" alt="surfboard" class="advantage__icon">
+                                    <svg class="features__icon">
+                                        <use xlink:href="img/icons/sprite.svg#surfboard"></use>
+                                    </svg>
                                </div>
                                 <div class="feature__text">Уникальный дизайн</div>
                             </li>
                             <li class="features__item feature">
                                 <div class="feature__icon">
-                                    <img src="img/feature/material.svg" alt="surfboard" class="features__icon">
+                                    <svg class="features__icon">
+                                        <use xlink:href="img/icons/sprite.svg#material"></use>
+                                    </svg>
                                 </div>
                                 <div class="feature__text">Прочные материалы</div>
                             </li>
                             <li class="features__item feature">
                                 <div class="feature__icon">
-                                    <img src="img/feature/delivery.svg" alt="surfboard" class="features__icon">
+                                    <svg class="features__icon">
+                                        <use xlink:href="img/icons/sprite.svg#delivery"></use>
+                                    </svg>
                                 </div>
                                 <div class="feature__text">Быстрая доставка</div>
                             </li>
@@ -84,7 +92,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__img">
                                 <div class="benefit__img-wrapper">
-                                    <img src="img/icons/perfectfit.svg" alt="perfect fit" class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="img/icons/sprite.svg#perfectfit"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -97,7 +107,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__img">
                                 <div class="benefit__img-wrapper">
-                                    <img src="img/icons/strong.svg" alt="perfect fit" class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="img/icons/sprite.svg#strong"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -110,7 +122,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__img">
                                 <div class="benefit__img-wrapper">
-                                    <img src="img/icons/unique.svg" alt="perfect fit" class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="img/icons/sprite.svg#unique"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -239,6 +253,30 @@
                     </form>
                 </div>
             </section>
+            <!-- <section class="section map-section">
+                <div id=map></div>
+                <footer class="footer">
+                    <div class="container footer__container">
+                        <address class="contacts">
+                            <div class="contacts__plase">Москва, ул.Новый Арбат, д.31/12</div>
+                            <a class="phone__number footer__phone-number" href="tel:+78009039090">
+                                <span class="phone-number__icon-elem">
+                                    <svg class="features__icon">
+                                        <use xlink:href="img/icons/sprite.svg#phone-footer"></use>
+                                    </svg>
+                                </span>
+                                <span class="phone-number__text phone-number__text--color--gray">8 800 903 90 90</span>
+                            </a>
+                        </address>
+                        <ul class="social">
+                            <li class="social__item"></li>
+                            <li class="social__item"></li>
+                            <li class="social__item"></li>
+                            <li class="social__item"></li>
+                        </ul>
+                    </div>
+                </footer>
+            </section> -->
         </div>
     </div>
     <nav class="fixed__menu">
