--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         </div>
                         <div class="form__col">
                             <div class="form__row">
-                                <label class="form__block indent__row">
+                                <label class="form__block">
                                     <div class="form__title">Комментарий</div>
                                     <textarea class="form__input form__input--textarea"></textarea>   
                                 </label>
@@ -242,7 +242,7 @@
                                 <label class="radio radio--checkbox">
                                     <input type="checkbox" class="radio__elem">
                                     <div class="radio__visible"></div>
-                                    <div class="radio__title">Оплата картой</div>
+                                    <div class="radio__title">Не перезванивать</div>
                                 </label>
                             </div>
                             <div class="form__btns">
@@ -253,30 +253,58 @@
                     </form>
                 </div>
             </section>
-            <!-- <section class="section map-section">
+            <section class="section map-section">
                 <div id=map></div>
                 <footer class="footer">
                     <div class="container footer__container">
-                        <address class="contacts">
-                            <div class="contacts__plase">Москва, ул.Новый Арбат, д.31/12</div>
-                            <a class="phone__number footer__phone-number" href="tel:+78009039090">
-                                <span class="phone-number__icon-elem">
-                                    <svg class="features__icon">
-                                        <use xlink:href="img/icons/sprite.svg#phone-footer"></use>
-                                    </svg>
-                                </span>
-                                <span class="phone-number__text phone-number__text--color--gray">8 800 903 90 90</span>
-                            </a>
-                        </address>
-                        <ul class="social">
-                            <li class="social__item"></li>
-                            <li class="social__item"></li>
-                            <li class="social__item"></li>
-                            <li class="social__item"></li>
-                        </ul>
+                        <div class="footer__col">
+                            <address class="contacts">
+                                <div class="contacts__plase">Москва, ул.Новый Арбат, д.31/12</div>
+                                <a class="phone__number footer__phone-number" href="tel:+78009039090">
+                                    <span class="phone-number__icon-elem">
+                                        <svg class="phone-number__icon phone-number__icon--color--dark">
+                                            <use xlink:href="img/icons/sprite.svg#phone-footer"></use>
+                                        </svg>
+                                    </span>
+                                    <span class="phone-number__text phone-number__text--color--gray">8 800 903 90 90</span>
+                                </a>
+                            </address>
+                        </div>
+                        <div class="footer__col-right">
+                            <ul class="social">
+                                <li class="social__item social--icon--vk">
+                                    <a class="social__link" href="#">
+                                        <svg class="social__icon">
+                                            <use xlink:href="img/icons/sprite.svg#vk"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social__item social--icon--facebook">
+                                    <a class="social__link" href="#">
+                                        <svg class="social__icon">
+                                            <use xlink:href="img/icons/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social__item social--icon--instagram">
+                                    <a class="social__link" href="#">
+                                        <svg class="social__icon">
+                                            <use xlink:href="img/icons/sprite.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social__item social--icon--twitter">
+                                    <a class="social__link" href="#">
+                                        <svg class="social__icon">
+                                            <use xlink:href="img/icons/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </footer>
-            </section> -->
+            </section>
         </div>
     </div>
     <nav class="fixed__menu">
